Modified the question_responses, added uuid

--- a/migrate.ipynb
+++ b/migrate.ipynb
@@ -22,32 +22,24 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['sqlite:///database2.sqlite3', 'postgresql://ctsbvjgtogsxoz:46fb3b39855994d7ad5da1e45d95c71571553d07708a0c893b2257917a2ffcec@ec2-3-231-82-226.compute-1.amazonaws.com:5432/d3pdm0hkadu8si']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from flask import Flask\n",
     "from flask_sqlalchemy import SQLAlchemy\n",
     "from secret import deployment\n",
-    "print(deployment)"
+    "import secrets\n",
+    "import uuid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "app_psql = Flask(__name__)\n",
-    "# \"sqlite:///database2.sqlite3\"\n",
     "app_psql.config['SQLALCHEMY_DATABASE_URI'] = deployment[1]\n",
-    "app_psql.config['SECRET_KEY'] = \"1b308e20a6f3193e43c021bb1412808f\"\n",
+    "app_psql.config['SECRET_KEY'] = secrets.token_hex(15)\n",
     "app_psql.config['SQLALCHEMY_TRACK_MODIFICATIONS'] = True\n",
     "db_psql = SQLAlchemy(app_psql)\n",
     "\n",
@@ -119,7 +111,8 @@
     "\n",
     "\n",
     "class question_responses(db_psql.Model):\n",
-    "    time = db_psql.Column(db_psql.DateTime, primary_key=True)\n",
+    "    id = db_psql.Column(db_psql.String(200), primary_key=True)\n",
+    "    time = db_psql.Column(db_psql.DateTime)\n",
     "    question_id = db_psql.Column(db_psql.String(\n",
     "        200), db_psql.ForeignKey('questions_db.id'))\n",
     "    user_id = db_psql.Column(db_psql.String(\n",
@@ -136,8 +129,9 @@
     "        return f'Question ID: {self.question_id} \\\n",
     "                is {resp} by {self.user_id} at {self.time}'\n",
     "\n",
-    "    def __init__(self, response, user, question, time):\n",
+    "    def __init__(self, id, response, user, question, time):\n",
     "        self.time = time\n",
+    "        self.id = id\n",
     "        self.response = response\n",
     "        self.user_id = user\n",
     "        self.question_id = question\n",
@@ -148,16 +142,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "app_sql = Flask(__name__)\n",
     "# \"sqlite:///database2.sqlite3\"\n",
     "app_sql.config['SQLALCHEMY_DATABASE_URI'] = deployment[0]\n",
-    "app_sql.config['SECRET_KEY'] = \"1b308e20a6f3193e43c021bb1412808f\"\n",
+    "app_sql.config['SECRET_KEY'] = secrets.token_hex(15)\n",
     "app_sql.config['SQLALCHEMY_TRACK_MODIFICATIONS'] = True\n",
     "db = SQLAlchemy(app_sql)\n",
+    "\n",
     "\n",
     "class user_db(db.Model):\n",
     "    id = db.Column(db.String(200), primary_key=True)\n",
@@ -221,11 +216,16 @@
     "# the frontned sends 1 or 0 as the response which is then\n",
     "# interpreter as like and dislike respectively\n",
     "\n",
+    "# we can change class names without changing the table names, this is very hepful\n",
     "\n",
-    "class question_responses(db.Model):\n",
+    "\n",
+    "class question_responses_old(db.Model):\n",
+    "    __tablename__ = \"question_responses\"\n",
     "    time = db.Column(db.DateTime, primary_key=True)\n",
-    "    question_id = db.Column(db.String(200), db.ForeignKey('questions_db.id'))\n",
-    "    user_id = db.Column(db.String(200), db.ForeignKey('user_db.id'))\n",
+    "    question_id = db.Column(db.String(\n",
+    "        200), db.ForeignKey('questions_db.id'))\n",
+    "    user_id = db.Column(db.String(\n",
+    "        200), db.ForeignKey('user_db.id'))\n",
     "    response = db.Column(db.Boolean)\n",
     "\n",
     "    def __repr__(self):\n",
@@ -238,14 +238,15 @@
     "        return f'Question ID: {self.question_id} \\\n",
     "                is {resp} by {self.user_id} at {self.time}'\n",
     "\n",
-    "    def __init__(self, response, user, question, time):\n",
+    "    def __init__(self, id, response, user, question, time):\n",
     "        self.time = time\n",
+    "        self.id = id\n",
     "        self.response = response\n",
     "        self.user_id = user\n",
     "        self.question_id = question\n",
     "\n",
     "\n",
-    "db.create_all()"
+    "db.create_all()\n"
    ]
   },
   {
@@ -428,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -461,15 +462,107 @@
     }
    ],
    "source": [
-    "query = db.session.query(question_responses)\n",
+    "query = db.session.query(question_responses_old)\n",
     "print(query)\n",
     "\n",
     "for q in query:\n",
     "    print(q)\n",
-    "    item = question_responses(\n",
-    "        response=q.response, user=q.user_id, question=q.question_id, time=q.time)\n",
+    "    item = question_responses(id=str(uuid.uuid4()),\n",
+    "                              response=q.response, user=q.user_id, question=q.question_id, time=q.time)\n",
     "    db_psql.session.add(item)\n",
     "db_psql.session.commit()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SELECT question_responses.time AS question_responses_time, question_responses.question_id AS question_responses_question_id, question_responses.user_id AS question_responses_user_id, question_responses.response AS question_responses_response \n",
+      "FROM question_responses\n",
+      "Question ID: d190ab3d-ec57-4174-a1e7-f22babfd05bc                 is Liked by 26d48cd3-e9b3-42dd-b467-fb7f1774c01b at 2022-05-04 00:51:55.101828\n",
+      "Question ID: d190ab3d-ec57-4174-a1e7-f22babfd05bc                 is Liked by 483d29e9-9134-4302-b7d5-ee86859bca7e at 2022-05-04 01:04:02.406465\n",
+      "Question ID: 8b6c1a8d-5dd7-43bd-a6da-25287760c57e                 is Liked by 483d29e9-9134-4302-b7d5-ee86859bca7e at 2022-05-04 01:04:03.587542\n",
+      "Question ID: d190ab3d-ec57-4174-a1e7-f22babfd05bc                 is Liked by 32ef1187-3506-4cc5-abec-8cbfdbe5970e at 2022-05-04 01:06:36.076331\n",
+      "Question ID: 44c60a14-d1d4-42cf-af0b-9d8a2c13ce3d                 is Liked by 32ef1187-3506-4cc5-abec-8cbfdbe5970e at 2022-05-04 01:06:39.138074\n",
+      "Question ID: 8b6c1a8d-5dd7-43bd-a6da-25287760c57e                 is Liked by 512dd3c3-c014-41e5-81bf-686f9a2d7754 at 2022-05-04 01:20:15.968711\n",
+      "Question ID: 44c60a14-d1d4-42cf-af0b-9d8a2c13ce3d                 is Liked by 512dd3c3-c014-41e5-81bf-686f9a2d7754 at 2022-05-04 02:06:02.555808\n",
+      "Question ID: d190ab3d-ec57-4174-a1e7-f22babfd05bc                 is Liked by 512dd3c3-c014-41e5-81bf-686f9a2d7754 at 2022-05-04 02:06:37.798606\n",
+      "Question ID: 643ebbc4-96eb-43c5-bfc4-384d1d2ad919                 is Liked by 4745dc2b-dcd4-420f-b5de-b3525d0c163a at 2022-05-04 02:11:29.760346\n",
+      "Question ID: 44c60a14-d1d4-42cf-af0b-9d8a2c13ce3d                 is Liked by 4745dc2b-dcd4-420f-b5de-b3525d0c163a at 2022-05-04 02:11:36.901169\n",
+      "Question ID: 44c60a14-d1d4-42cf-af0b-9d8a2c13ce3d                 is Liked by e3f9b12c-4635-421e-b7c5-c02562be4cef at 2022-05-04 02:13:43.123619\n",
+      "Question ID: 8b6c1a8d-5dd7-43bd-a6da-25287760c57e                 is Liked by e3f9b12c-4635-421e-b7c5-c02562be4cef at 2022-05-04 02:13:46.363017\n",
+      "Question ID: 40978274-f629-465b-9c28-487fec5ef1a7                 is Liked by 98827c22-d36a-45d8-b972-bd5342690089 at 2022-05-04 02:14:45.933098\n",
+      "Question ID: 8b6c1a8d-5dd7-43bd-a6da-25287760c57e                 is Liked by 98827c22-d36a-45d8-b972-bd5342690089 at 2022-05-04 02:14:51.230883\n",
+      "Question ID: 62fb7534-f2c5-4d7f-95e0-d57cae499886                 is Liked by 98827c22-d36a-45d8-b972-bd5342690089 at 2022-05-04 02:14:53.794799\n",
+      "Question ID: 40978274-f629-465b-9c28-487fec5ef1a7                 is Liked by bb211cf1-49c0-4031-a05c-3a58994a86c2 at 2022-05-04 02:16:43.871058\n",
+      "Question ID: f92eea8b-fcc7-422e-a898-d4fd3b1c9172                 is Liked by bb211cf1-49c0-4031-a05c-3a58994a86c2 at 2022-05-04 02:16:45.186618\n",
+      "Question ID: bc3f5f77-de61-4430-b5e7-0ed0688881ec                 is Liked by bb211cf1-49c0-4031-a05c-3a58994a86c2 at 2022-05-04 02:16:46.519500\n",
+      "Question ID: 8b6c1a8d-5dd7-43bd-a6da-25287760c57e                 is Liked by 54ab9d43-229d-40e9-87e2-2e54ae0b3eef at 2022-05-04 02:31:15.609268\n",
+      "Question ID: bc3f5f77-de61-4430-b5e7-0ed0688881ec                 is Liked by 54ab9d43-229d-40e9-87e2-2e54ae0b3eef at 2022-05-04 02:31:17.883488\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = db.session.query(question_responses_old)\n",
+    "print(query)\n",
+    "for q in query:\n",
+    "    print(q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SELECT question_responses.id AS question_responses_id, question_responses.time AS question_responses_time, question_responses.question_id AS question_responses_question_id, question_responses.user_id AS question_responses_user_id, question_responses.response AS question_responses_response \n",
+      "FROM question_responses\n",
+      "7e0d02ed-acfd-449b-9f11-61ee1ef02685\n",
+      "93f0a1c4-bc7d-4208-9e5e-e84215596cd5\n",
+      "907c5087-fcc9-442e-8276-b2a024300662\n",
+      "6f72a3ad-4355-4277-ae6c-7fbbb72525c9\n",
+      "aff82e8f-65e5-400f-8253-fe037b4b453f\n",
+      "2b8cccdd-13d7-42ec-bccc-9d39f37425fc\n",
+      "c845b027-a758-4e65-af58-59292c084bdf\n",
+      "41718756-2891-48d6-91bb-3e48e9be0619\n",
+      "5f795d90-702f-46bd-8021-0f2c4d91a50f\n",
+      "793fc438-ef1d-4d28-be95-d3622b351681\n",
+      "bc0b3dc7-3347-4394-9970-404c6505f1ca\n",
+      "dd389b29-9c0f-44b1-902a-2031b358339e\n",
+      "2661feb6-b47a-480b-b206-fa26e2b9b3ab\n",
+      "6cb66cc1-2063-4bb4-a10a-abc7192ea60a\n",
+      "0bb1746f-edaf-4da9-93cc-a2f892e16790\n",
+      "baeff4e2-a518-4f5b-8327-165b9fe2ce5d\n",
+      "a48d81f0-3289-4cf1-8d9a-8e0527c60c6b\n",
+      "5466b1f0-72f7-434e-9993-ee6b51eaf7ef\n",
+      "547de41b-338a-4d1d-a678-50adba54dd59\n",
+      "7a7404ee-477b-4b6d-9a0c-76891a69c404\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = db_psql.session.query(question_responses)\n",
+    "print(query)\n",
+    "for q in query:\n",
+    "    print(q.id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db_psql.session.close()\n",
+    "db.session.close()"
    ]
   }
  ],
